<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/linearLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:gravity="center"
            android:layout_margin="20dp"
            android:padding="10dp">

            <ImageView
                    android:id="@+id/logo"
                    android:layout_width="350dp"
                    android:layout_height="250dp"
                    android:src="@drawable/logo_login"
                    android:layout_marginBottom="32dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginBottom="8dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto2"
                    android:textSize="14sp"
                    android:layout_marginBottom="24dp"/>

            <EditText
                    android:id="@+id/etCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:background="@android:drawable/editbox_background"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"/>

            <EditText
                    android:id="@+id/etContrasenna"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:hint="@string/contrasenna"
                    android:background="@android:drawable/editbox_background"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"
                     />

    <Button
                    android:id="@+id/btContinuar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/texto3"
                    android:backgroundTint="#000000"
                    android:textColor="#FFFFFF"
                    android:layout_marginBottom="16dp"/>

            <Button
                    android:id="@+id/btRegistrarse"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/texto4"
                    android:backgroundTint="#000000"
                    android:textColor="#FFFFFF"
                    android:layout_marginBottom="16dp"/>


    </LinearLayout>
